# uefi-hv-bypass

./: .gitignore  .gitmodules  NOTICE  README.md  TASKS.md
MongilLoader/: README.md
MongilLoader/Loader/: Loader.c  Loader.h  Loader.inf
MongilLoader/LoaderNoGuard/: LoaderNoGuard.c  LoaderNoGuard.inf
MongilLoader/OphionDxe/: ApInit.c  EfiAlloc.c  EfiCompat.h  KiServiceTable.c  NtosPatch.c  OphionDxe.c  OphionDxe.inf  VmcallHandler.c  VmcsAutoMsr.c  VmmEpt.c  VmmExit.c  VmmGlobals.c  VmmGuestPt.c  VmmHostCr3.c  VmmHostGdt.c  VmmHostIdt.c  VmmInit.c  VmmInstall.c  VmmLog.c  VmmLogVar.c  VmmMp.c  VmmPerCpuLog.c  VmmPerCpuLog.h  VmmResolveNtos.c  VmmSha256.c  VmmSpin.h  VmmUtil.c  VmmVmcs.c  hv_types.h  ia32.h
Ophion/: Ophion.vcxproj  Ophion.vcxproj.filters  get-log.ps1  get-xhook.ps1  load_ophion.ps1  unload_ophion.ps1
detect/: vmaware.hpp
detect/vgk_replica/: CMakeLists.txt  README.md  bsp_test.txt  build_probe.ps1
detect/vgk_replica/include/: vgk_probe.h
detect/vgk_replica/probe_drv/: msr_test.c  probe_drv.c  probe_drv.vcxproj
detect/vgk_replica/src/: cpuid_checks.c  main.c  msr_cr_checks.c  nic_smbios_checks.c  timing_checks.c
pubg_external/: Cargo.toml  README.md
pubg_external/src/: hv_pipe.rs  lib.rs  main.rs
pubg_external/src/features/: aimbot.rs  esp.rs  loot.rs  mod.rs  vehicle.rs
pubg_external/src/overlay/: menu.rs  mod.rs  window.rs
pubg_external/src/sdk/: dumper.rs  mod.rs  offsets.rs  player.rs  pubg_offsets.json  pubg_offsets.rs  uworld.rs  xenuine.rs
scripts/: NVRAM_RESTORE.txt  clear_ophn_log.ps1  disable_hyperv.ps1  nvram_restore_efiguard.ps1  phase0_accept.ps1  post_reboot_verify.ps1  pre_reboot_finalize.ps1  read_ophn_log.ps1  stage_pathB.ps1  vmm_alive_check.ps1
(+56 files in other folders)
