[package]
name = "pubg_external"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pubg_external"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
imgui = "0.12"
nalgebra-glm = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
